fix projects section spacing

--- a/static/index.css
+++ b/static/index.css
@@ -237,10 +237,6 @@ a:hover,
   margin: 2rem auto;
 }
 
-.projects-subtitle {
-  margin: 3rem 0;
-}
-
 .project {
   padding: 2rem;
   display: flex;
